# xiaomi_cup

./: README.md  docker容器中的git仓库配置.md  lcmlog-2026-04-02.01.jlp
25/mi-ultra-team/: 5.2_1.py  5.2_hui2.py  README.en.md  README.md  gazebo.xacro  main.py  s.py  s1.py  s7.py  s8.py  s9.py  slope.py  stone.py  zongkong.py
25/mi-ultra-team/初赛/: s弯.py  总控.py  第一个回路.py  第三个回路.py  第二个回路.py
cyberdog_sim/: .gitignore
cyberdog_sim/src/cyberdog_color_detector_py/: package.xml  setup.cfg  setup.py
cyberdog_sim/src/cyberdog_qr_detector_py/: package.xml  setup.cfg  setup.py
cyberdog_sim/src/cyberdog_simulator/cyberdog_example/: CMakeLists.txt
cyberdog_ws/install/: local_setup.sh  setup.sh
cyberdog_ws/log/: latest_build
details/: 控制参数.md
details/lcm控制参数/: mode转画图.drawio  控制参数.md
details/传感器插件/: D435深度相机插入与调试记录.md  插入传感器.md  蓝色橙色小球识别.md
details/环境配置/: docker容器中的git仓库配置.md
details/编译构建/: 使用ros编译构建细节.md
install/: local_setup.sh  setup.sh
install/lib/cyberdog_qr_detector_py/: qr_detector_py_node
install/share/cyberdog_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/cyberdog_msg/: local_setup.dsv  (+6 more)
loco_hl_example/basic_motion/: main.py
loco_hl_example/stone_plate_crossing/: localization_lcmt.py  main.py  robot_control_cmd_lcmt.py
loco_hl_example/stone_plate_turn_left/: main.py  reset_one_click.sh  robot_control_cmd_lcmt.py
loco_hl_example/walk_mode/: jump-high-to-low.toml  jump-low-to-high.toml  pass-height-bar-fast.toml  pass-stone.toml  pass_stone_test.py  turn-corner-fast.toml
log/: latest_build
(+1400 files in other folders)
